--- a/app/views/dashboard/show.html.haml
+++ b/app/views/dashboard/show.html.haml
@@ -10,7 +10,7 @@
 
     = render :partial => "courses/courses", :locals => {:courses => @basic_studies}
 
-  %p= link_to t('pages.courses.showall'), basics_courses_url
+  %p= link_to t('pages.courses.showall'), basics_courses_path
 
   %table#intermediate_studies
     %tr
@@ -18,7 +18,7 @@
 
     = render :partial => "courses/courses", :locals => {:courses => @intermediate_studies}
 
-  %p= link_to t('pages.courses.showall'), intermediates_courses_url
+  %p= link_to t('pages.courses.showall'), intermediates_courses_path
 
   %table#advanced_studies
     %tr
@@ -26,11 +26,11 @@
 
     = render :partial => "courses/courses", :locals => {:courses => @advanced_studies}
 
-  %p= link_to t('pages.courses.showall'), advanceds_courses_url
+  %p= link_to t('pages.courses.showall'), advanceds_courses_path
 
   %table#other_studies
     %tr
       %th= t 'courses.levels.other'
     = render :partial => "courses/courses", :locals => {:courses => @other_studies}
 
-  %p= link_to t('pages.courses.showall'), others_courses_url
+  %p= link_to t('pages.courses.showall'), others_courses_path
