--- a/app/views/exams/_table.html.haml
+++ b/app/views/exams/_table.html.haml
@@ -12,6 +12,6 @@
     %tbody
       - exams.each do |exam|
         %tr
-          %td= link_to exam.type.name, course_exam_url(exam.course, exam)
+          %td= link_to exam.type.name, course_exam_path(exam.course, exam)
           %td= exam.date
-          %td= link_to "PDF", course_exam_url(exam.course, exam, :format => :pdf)
+          %td= link_to "PDF", course_exam_path(exam.course, exam, :format => :pdf)
