--- a/app/views/courses/_courses.html.haml
+++ b/app/views/courses/_courses.html.haml
@@ -2,8 +2,8 @@
   %tr{:class => course.has_exams? ? '' : 'noexams'}
     %td
       = course.code
-      = link_to "#{course.name}", course_exams_url(course)
+      = link_to "#{course.name}", course_exams_path(course)
       = "(#{course.credits} op)"
 
-    %td= link_to t('pages.dashboard.practice'), generate_course_exams_url(course)
-    %td.column3= link_to t('pages.dashboard.addnew'), new_course_exam_url(course)
+    %td= link_to t('pages.dashboard.practice'), generate_course_exams_path(course)
+    %td.column3= link_to t('pages.dashboard.addnew'), new_course_exam_path(course)
