--- a/app/views/courses/others.html.haml
+++ b/app/views/courses/others.html.haml
@@ -2,7 +2,7 @@
   = t 'courses.levels.other'
 - content_for :content do
 
-  %p#back= link_to t('pages.courses.back'), root_url
+  %p#back= link_to t('pages.courses.back'), root_path
 
   %p#hide-button
     %a(href="#hideshow-noexams")=t 'pages.courses.show-hide-unpublished'
