--- a/app/views/exams/edit.html.haml
+++ b/app/views/exams/edit.html.haml
@@ -9,19 +9,19 @@
       %ul.errors
       - flash[:errors].each do |error|
         %li #{error}
-    %p#exam_url(style="display:none") #{course_exam_path(@course.id, @exam.id)}
+    %p#exam_path(style="display:none") #{course_exam_path(@course.id, @exam.id)}
 
   #questions
     %ul
       - @exam.questions.each do |question|
         %li(id="question_id-#{question.id}")
-          = link_to question_name_for_exam_input(question.name), course_exam_question_url(@course.id, @exam.id, question.id)
+          = link_to question_name_for_exam_input(question.name), course_exam_question_path(@course.id, @exam.id, question.id)
           %a(href="#remove")
             %span.ui-icon.ui-icon-close Remove Tab
       %li.new-question= link_to t('pages.exams.forms.questions.new'), '#new_question'
 
   #buttons
-    - form_for @exam, :url => course_exam_url(@course.id, @exam.id), :html => { :method => :delete } do |f|
+    - form_for @exam, :url => course_exam_path(@course.id, @exam.id), :html => { :method => :delete } do |f|
       %div= submit_tag t('pages.exams.forms.publish.back')
-    - form_for @exam, :url => course_exam_url(@course.id, @exam.id) do |f|
+    - form_for @exam, :url => course_exam_path(@course.id, @exam.id) do |f|
       %div= submit_tag t('pages.exams.forms.publish.submit')
