--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,7 +1,7 @@
 #header
 
   #logo
-    = link_to(image_tag("logo.png", :border => 0, :alt => "Tenttiarkisto", :title => "Tenttiarkisto"), root_url)
+    = link_to(image_tag("logo.png", :border => 0, :alt => "Tenttiarkisto", :title => "Tenttiarkisto"), root_path)
 
   #login= render :partial => "layouts/login"
 
