--- a/app/views/layouts/_main.html.haml
+++ b/app/views/layouts/_main.html.haml
@@ -4,9 +4,9 @@
     - if (@controller.controller_name == 'exams')
       -# tabs_on_rails gem making tabs if the current page is one of the exams pages
       - tabs_tag do |tab|
-        = tab.all t('pages.exams.tabs.all'), course_exams_url(@course)
-        = tab.generate t('pages.exams.tabs.generate'), generate_course_exams_url(@course)
-        = tab.new t('pages.exams.tabs.add'), new_course_exam_url(@course)
+        = tab.all t('pages.exams.tabs.all'), course_exams_path(@course)
+        = tab.generate t('pages.exams.tabs.generate'), generate_course_exams_path(@course)
+        = tab.new t('pages.exams.tabs.add'), new_course_exam_path(@course)
 
   #mainbody
 
