--- a/app/views/questions/show.html.haml
+++ b/app/views/questions/show.html.haml
@@ -21,7 +21,7 @@
     %td
       %div
         %p= t('pages.exams.forms.questions.image.title')
-        - form_for :image, :url => image_url, :html => { :multipart => true } do |f|
+        - form_for :image, :url => image_path, :html => { :multipart => true } do |f|
           = f.file_field :question_image
           = hidden_field(:question, :id)
           = f.submit t('pages.exams.forms.questions.image.submit')
