--- a/app/views/layouts/_search.html.haml
+++ b/app/views/layouts/_search.html.haml
@@ -1,6 +1,6 @@
 #search
   #box
-    - form_tag search_path, :method => :get do
+    = form_tag search_path, :method => :get do
       %table
         %tr
           %td.textfield= text_field_tag :query
