--- a/app/views/exams/show.html.haml
+++ b/app/views/exams/show.html.haml
@@ -1,5 +1,9 @@
 - content_for :title do
   #{@course.name} :: #{@exam.name}
+
+- content_for :left do
+  = render :partial => 'left'
+
 - content_for :content do
   %h2 #{@course.name} - #{@exam.name}
 
