--- a/app/views/layouts/_main.html.haml
+++ b/app/views/layouts/_main.html.haml
@@ -1,12 +1,7 @@
 #main
 
   #left
-    - if (controller.controller_name == 'exams')
-      -# tabs_on_rails gem making tabs if the current page is one of the exams pages
-      - tabs_tag do |tab|
-        = tab.all t('pages.exams.tabs.all'), course_exams_path(@course)
-        = tab.generate t('pages.exams.tabs.generate'), generate_course_exams_path(@course)
-        = tab.new t('pages.exams.tabs.add'), new_course_exam_path(@course)
+    = yield :left
 
   #mainbody
 
