moved generating under generated

--- a/app/views/generated_exams/new.html.haml
+++ b/app/views/generated_exams/new.html.haml
@@ -13,7 +13,7 @@
 
   - else
 
-    - form_tag generate_preview_course_exams_path(@course.id), :method => 'get' do
+    - form_tag course_generated_exams_path(@course.id), :method => :post do
 
       %table.generator
         %tr
