--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -31,7 +31,26 @@
 
         #login= render :partial => "layouts/login"
 
-      = render :partial => "layouts/main"
+      #main
+
+        #left
+          = yield :left
+
+        #mainbody
+
+          -# stupid history breadcrumbs are disabled
+          -# #breadcrumb
+            -# %script{:type=> "text/javascript"} doCrumbs();
+          - unless flash[:notice].blank?
+            %p.notifications= flash[:notice]
+          - unless flash[:alert].blank?
+            %p.notifications= flash[:alert]
+
+          = render :partial => "layouts/search"
+
+          #content= (yield :content or yield)
+
+        #right
 
       #footer
         %span= link_to('FAQ', faq_path)
