--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -29,7 +29,23 @@
         #logo
           = link_to(image_tag("logo.png", :border => 0, :alt => "Tenttiarkisto", :title => "Tenttiarkisto"), root_path)
 
-        #login= render :partial => "layouts/login"
+        #login
+          - if signed_in?
+            %span.title #{t('pages.session.logged_in')}:
+            #{current_user.username}
+            = link_to t('pages.session.logout'), destroy_user_session_path
+            - if can? :access, :admin
+              = link_to t('pages.session.admin'), admin_dashboard_path
+          - else
+            = form_for(User.new, :user, :url => session_path(:user)) do |f|
+              %table
+                %tr
+                  %td= f.label :username, t('pages.session.form.username')
+                  %td= f.label :password, t('pages.session.form.password')
+                %tr
+                  %td= f.text_field :username
+                  %td= f.password_field :password
+                  %td= submit_tag t('pages.session.form.submit')
 
       #main
 
