--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -49,8 +49,7 @@
 
       #main
 
-        #left
-          = yield :left
+        #left= render :partial => 'left' rescue nil
 
         #mainbody
 
