javascript is javascript

--- a/app/views/exams/index.html.haml
+++ b/app/views/exams/index.html.haml
@@ -4,29 +4,29 @@
 - content_for :header do
   = javascript_include_tag 'jquery.dataTables.min'
 
-  %script{:type=> "text/javascript"}
+  :javascript
     $(document).ready(function() {
-    $('#exams').dataTable({
-    "oLanguage": {
-    "sProcessing":   "Hetkinen...",
-    "sLengthMenu":   "Näytä kerralla _MENU_ riviä",
-    "sZeroRecords":  "Tietoja ei löytynyt",
-    "sInfo":      "Näytetään rivit _START_ - _END_ (yhteensä _TOTAL_ )",
-    "sInfoEmpty":    "Näytetään 0 - 0 (yhteensä 0)",
-    "sInfoFiltered": "(suodatettu _MAX_ tuloksen joukosta)",
-    "sInfoPostFix":  "",
-    "sSearch":    "Etsi:",
-    "sUrl":    "",
-    "oPaginate": {
-    "sFirst":    "Ensimmäinen",
-    "sPrevious": "Edellinen",
-    "sNext":  "Seuraava",
-    "sLast":  "Viimeinen"
-    }
+      $('#exams').dataTable({
+        "oLanguage": {
+          "sProcessing": "Hetkinen...",
+          "sLengthMenu": "Näytä kerralla _MENU_ riviä",
+          "sZeroRecords": "Tietoja ei löytynyt",
+          "sInfo": "Näytetään rivit _START_ - _END_ (yhteensä _TOTAL_ )",
+          "sInfoEmpty": "Näytetään 0 - 0 (yhteensä 0)",
+          "sInfoFiltered": "(suodatettu _MAX_ tuloksen joukosta)",
+          "sInfoPostFix": "",
+          "sSearch": "Etsi:",
+          "sUrl": "",
+          "oPaginate": {
+            "sFirst": "Ensimmäinen",
+            "sPrevious": "Edellinen",
+            "sNext": "Seuraava",
+            "sLast": "Viimeinen"
+          }
 
-    }
+        }
+      });
     });
-    } );
 
 - content_for :content do
   %h2= @course.name
