--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,11 +4,8 @@
   %head
 
     %link{ :rel => "shortcut icon", :href => "/favicon.ico", :type => "image/x-icon"}/
-    %title
-      - if yield :title
-        = "Tenttiarkisto :: #{yield :title}"
-      - else
-        Tenttiarkisto
+
+    %title Tenttiarkisto #{":: #{yield :title}" if yield(:title)}
 
     = stylesheet_link_tag 'screen.css', :media => 'screen, projection'
     = stylesheet_link_tag 'print.css', :media => 'print'
