added exam builder controller

--- a/app/views/courses/_courses.html.haml
+++ b/app/views/courses/_courses.html.haml
@@ -6,3 +6,4 @@
       = "(#{course.credits} op)"
 
     %td= link_to t('pages.dashboard.practice'), new_course_generated_exam_path(course)
+    %td.column3= link_to t('pages.dashboard.addnew'), new_course_exam_builder_path(course)
