--- a/app/views/exam_builders/show.html.haml
+++ b/app/views/exam_builders/show.html.haml
@@ -6,4 +6,4 @@
 
   = render :partial => "exams/questions", :locals => {:questions => @exam_builder.exam.questions, :points => @exam_builder.exam.maximum_points}
 
-  Edit | Other blah blah
+  #{link_to t('pages.exams.forms.editexam.button'), edit_course_exam_builder_path(@course)} | Other blah blah
