--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,6 +4,7 @@
   %head
 
     %link{ :rel => "shortcut icon", :href => "/favicon.ico", :type => "image/x-icon"}/
+    = csrf_meta_tag
 
     %title= title(yield(:title))
 
