--- a/app/views/exam_builder/questions/sort.html.haml
+++ b/app/views/exam_builder/questions/sort.html.haml
@@ -1,1 +1,1 @@
-= render(:partial => 'exam_builder/question', :collection => @exam_builder.exam.questions)
+= render(:partial => 'exam_builder/question', :collection => @exam_builder.exam.questions.rank(:showing_order))
